--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.8.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"bootstrap": "^5.1.3",
+		"ethers": "^5.6.8",
+		"prettier": "^2.6.2",
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.1.0",
