--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"bootstrap": "^5.1.3",
+		"d3": "^5.5.0",
 		"ethers": "^5.6.8",
 		"prettier": "^2.6.2",
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.4.0",
+		"react-d3-graph": "^2.6.0",
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
