--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
 		"react-d3-graph": "^2.6.0",
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^4.0.3",
 		"three": "0.121.0",
 		"vanta": "^0.5.22",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"web3": "^1.7.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
