--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
 		"react-bootstrap": "^2.4.0",
 		"react-d3-graph": "^2.6.0",
 		"react-dom": "^18.1.0",
+		"react-dropdown-select": "^4.9.0",
+		"react-hook-form": "^7.32.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^4.0.3",
+		"react-select": "^5.3.2",
+		"react-select-material-ui": "^8.0.1",
 		"three": "0.121.0",
 		"vanta": "^0.5.22",
 		"web-vitals": "^2.1.4",
