--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"bootstrap": "^5.1.3",
 		"d3": "^5.5.0",
 		"ethers": "^5.6.8",
+		"loading-animations-react": "^1.3.3",
 		"prettier": "^2.6.2",
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.4.0",
@@ -22,6 +23,7 @@
 		"react-dom": "^18.1.0",
 		"react-dropdown-select": "^4.9.0",
 		"react-hook-form": "^7.32.2",
+		"react-loading-spin": "^2.1.9",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^4.0.3",
 		"react-select": "^5.3.2",
