--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-scripts": "^4.0.3",
 		"react-select": "^5.3.2",
 		"react-select-material-ui": "^8.0.1",
+		"react-spring": "^9.4.5",
 		"three": "0.121.0",
 		"vanta": "^0.5.22",
 		"web-vitals": "^2.1.4",
